--- a/web/src/app/modules/shopping/products/product-list/product-list.component.html
+++ b/web/src/app/modules/shopping/products/product-list/product-list.component.html
@@ -1,1 +1,112 @@
-<p>product-list works!</p>
+<div class="row">
+  <!--    <c:forEach var="product" items="${products}">-->
+  <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
+    <div class="img-box">
+      <img src="../../../../assets/images/p1.JPG" class="prd-img-lg">
+      <div class="brd img-box-p r-btm-5 shw-hdn col-12">
+        <div>
+          <div class="head-text float-left">Long product name goes here</div>
+          <div class="float-right">$xxx.xx</div>
+        </div>
+        <div class="details-text float-left">short description like thi ajfkafkla fja  anfkdkfdjdk</div>
+
+        <div class="add-cart">
+          <button type="submit" class="btn btn-primary btn-add-cart">
+            <i class="fas fa-cart-plus fa-2x"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
+    <div class="img-box">
+      <img src="../../../../assets/images/p1.JPG" class="prd-img-lg">
+      <div class="brd img-box-p r-btm-5 shw-hdn col-12">
+        <div>
+          <div class="head-text float-left">Product Name 1</div>
+          <div class="float-right">$xxx.xx</div>
+        </div>
+        <div class="details-text float-left">short description like thi ajfkafkla fja  anfkdkfdjdk</div>
+
+        <div class="add-cart">
+          <button type="submit" class="btn btn-primary btn-add-cart">
+            <i class="fas fa-cart-plus fa-2x"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
+    <div class="img-box">
+      <img src="../../../../assets/images/p1.JPG" class="prd-img-lg">
+      <div class="brd img-box-p r-btm-5 shw-hdn col-12">
+        <div>
+          <div class="head-text float-left">Product Name 3</div>
+          <div class="float-right">$xxx.xx</div>
+        </div>
+        <div class="details-text float-left">short description like thi ajfkafkla fja  anfkdkfdjdk</div>
+
+        <div class="add-cart">
+          <button type="submit" class="btn btn-primary btn-add-cart">
+            <i class="fas fa-cart-plus fa-2x"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
+    <div class="img-box">
+      <img src="../../../../assets/images/p1.JPG" class="prd-img-lg">
+      <div class="brd img-box-p r-btm-5 shw-hdn col-12">
+        <div>
+          <div class="head-text float-left">Product Name 4</div>
+          <div class="float-right">$xxx.xx</div>
+        </div>
+        <div class="details-text float-left">short description like thi ajfkafkla fja  anfkdkfdjdk</div>
+
+        <div class="add-cart">
+          <button type="submit" class="btn btn-primary btn-add-cart">
+            <i class="fas fa-cart-plus fa-2x"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
+    <div class="img-box">
+      <img src="../../../../assets/images/p1.JPG" class="prd-img-lg">
+      <div class="brd img-box-p r-btm-5 shw-hdn col-12">
+        <div>
+          <div class="head-text float-left">Product Name 4</div>
+          <div class="float-right">$xxx.xx</div>
+        </div>
+        <div class="details-text float-left">short description like thi ajfkafkla fja  anfkdkfdjdk</div>
+
+        <div class="add-cart">
+          <button type="submit" class="btn btn-primary btn-add-cart">
+            <i class="fas fa-cart-plus fa-2x"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
+    <div class="img-box">
+      <img src="../../../../assets/images/p1.JPG" class="prd-img-lg">
+      <div class="brd img-box-p r-btm-5 shw-hdn col-12">
+        <div>
+          <div class="head-text float-left">Product Name 5</div>
+          <div class="float-right">$xxx.xx</div>
+        </div>
+        <div class="details-text float-left">short description like thi ajfkafkla fja  anfkdkfdjdk</div>
+
+        <div class="add-cart">
+          <button type="submit" class="btn btn-primary btn-add-cart">
+            <i class="fas fa-cart-plus fa-2x"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--    </c:forEach>-->
+</div>
