--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+@import "../node_modules/bootswatch/dist/cerulean/bootstrap.css";
+@import "./assets/css/style.css";
+
