Add font-awesome style.

--- a/web/src/app/modules/shopping/products/product-list/product-list.component.html
+++ b/web/src/app/modules/shopping/products/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row justify-content-center">
   <!--    <c:forEach var="product" items="${products}">-->
   <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
     <div class="img-box">
@@ -11,8 +11,9 @@
         <div class="details-text float-left">short description like thi ajfkafkla fja  anfkdkfdjdk</div>
 
         <div class="add-cart">
+          <i class="fas fa-cart-plus"></i>
           <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fas fa-cart-plus fa-2x"></i>
+            <i class="fas fa-cart-plus"></i>
           </button>
         </div>
       </div>
