--- a/web/src/app/modules/authentication/signup/signup.component.html
+++ b/web/src/app/modules/authentication/signup/signup.component.html
@@ -1,196 +1,193 @@
 <main class="acc-form">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header">Register</div>
 
-  <div class="cotainer">
-    <div class="row justify-content-center">
-      <div class="col-md-8">
-        <div class="card">
-          <div class="card-header">Register</div>
+        <div class="card-body">
+          <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+            <fieldset>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email"
+                       [formControl]="signupForm.get('email')"
+                       [ngClass]="{'is-invalid': isValid('email')}"
+                       id="email"
+                       class="form-control"
+                       placeholder="Enter email">
+                <div *ngIf="hasError('email', 'required')" class="invalid-feedback">
+                  Email address is required
+                </div>
+                <div *ngIf="hasError('email', 'email')" class="invalid-feedback">
+                  Invalid email address
+                </div>
+                <div *ngIf="userEmailFail" class="invalid-feedback custom-error">
+                  {{userEmailIsAlreadyTakenErrorMessage}}
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password"
+                       [formControl]="signupForm.get('password')"
+                       [ngClass]="{'is-invalid': isValid('password')}"
+                       class="form-control"
+                       id="password"
+                       placeholder="Password">
+                <div *ngIf="hasError('password', 'required')" class="invalid-feedback">
+                  Password is required
+                </div>
+                <div *ngIf="hasError('password', 'pattern')" class="invalid-feedback">
+                  Password must contain at least one number and one uppercase and lowercase letter, and length at least
+                  8 characters
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="name"
+                       [formControl]="signupForm.get('name')"
+                       [ngClass]="{'is-invalid': isValid('name')}"
+                       id="name"
+                       class="form-control"
+                       placeholder="Enter your name">
+                <div *ngIf="hasError('name', 'required')" class="invalid-feedback">
+                  Email address is required
+                </div>
+                <div *ngIf="hasError('email', 'email')" class="invalid-feedback">
+                  Invalid email address
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="phone">Phone</label>
+                <input type="text"
+                       [formControl]="signupForm.get('phone')"
+                       class="form-control"
+                       id="phone"
+                       placeholder="phone">
+              </div>
 
-          <div class="card-body">
-            <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
               <fieldset>
+                <legend>Address</legend>
                 <div class="form-group">
-                  <label for="email">Email</label>
-                  <input type="email"
-                         [formControl]="signupForm.get('email')"
-                         [ngClass]="{'is-invalid': isValid('email')}"
-                         id="email"
-                         class="form-control"
-                         placeholder="Enter email">
-                  <div *ngIf="hasError('email', 'required')" class="invalid-feedback">
-                    Email address is required
-                  </div>
-                  <div *ngIf="hasError('email', 'email')" class="invalid-feedback">
-                    Invalid email address
-                  </div>
-                  <div *ngIf="userEmailFail" class="invalid-feedback custom-error">
-                    {{userEmailIsAlreadyTakenErrorMessage}}
+                  <label for="state">state</label>
+                  <select class="form-control" id="state"
+                          [formControl]="signupForm.get('address.state')"
+                          [ngClass]="{'is-invalid': isValid('address.state')}">
+                    <option value="AL">Alabama</option>
+                    <option value="AK">Alaska</option>
+                    <option value="AZ">Arizona</option>
+                    <option value="AR">Arkansas</option>
+                    <option value="CA">California</option>
+                    <option value="CO">Colorado</option>
+                    <option value="CT">Connecticut</option>
+                    <option value="DE">Delaware</option>
+                    <option value="DC">District of Columbia</option>
+                    <option value="FL">Florida</option>
+                    <option value="GA">Georgia</option>
+                    <option value="HI">Hawaii</option>
+                    <option value="ID">Idaho</option>
+                    <option value="IL">Illinois</option>
+                    <option value="IN">Indiana</option>
+                    <option value="IA">Iowa</option>
+                    <option value="KS">Kansas</option>
+                    <option value="KY">Kentucky</option>
+                    <option value="LA">Louisiana</option>
+                    <option value="ME">Maine</option>
+                    <option value="MD">Maryland</option>
+                    <option value="MA">Massachusetts</option>
+                    <option value="MI">Michigan</option>
+                    <option value="MN">Minnesota</option>
+                    <option value="MS">Mississippi</option>
+                    <option value="MO">Missouri</option>
+                    <option value="MT">Montana</option>
+                    <option value="NE">Nebraska</option>
+                    <option value="NV">Nevada</option>
+                    <option value="NH">New Hampshire</option>
+                    <option value="NJ">New Jersey</option>
+                    <option value="NM">New Mexico</option>
+                    <option value="NY">New York</option>
+                    <option value="NC">North Carolina</option>
+                    <option value="ND">North Dakota</option>
+                    <option value="OH">Ohio</option>
+                    <option value="OK">Oklahoma</option>
+                    <option value="OR">Oregon</option>
+                    <option value="PA">Pennsylvania</option>
+                    <option value="RI">Rhode Island</option>
+                    <option value="SC">South Carolina</option>
+                    <option value="SD">South Dakota</option>
+                    <option value="TN">Tennessee</option>
+                    <option value="TX">Texas</option>
+                    <option value="UT">Utah</option>
+                    <option value="VT">Vermont</option>
+                    <option value="VA">Virginia</option>
+                    <option value="WA">Washington</option>
+                    <option value="WV">West Virginia</option>
+                    <option value="WI">Wisconsin</option>
+                    <option value="WY">Wyoming</option>
+                  </select>
+                  <div *ngIf="hasError('address.state', 'required')" class="invalid-feedback">
+                    State is required
                   </div>
                 </div>
+
                 <div class="form-group">
-                  <label for="password">Password</label>
-                  <input type="password"
-                         [formControl]="signupForm.get('password')"
-                         [ngClass]="{'is-invalid': isValid('password')}"
-                         class="form-control"
-                         id="password"
-                         placeholder="Password">
-                  <div *ngIf="hasError('password', 'required')" class="invalid-feedback">
-                    Password is required
-                  </div>
-                  <div *ngIf="hasError('password', 'pattern')" class="invalid-feedback">
-                    Password must contain at least one number and one uppercase and lowercase letter, and length at least 8 characters
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="name">Name</label>
-                  <input type="name"
-                         [formControl]="signupForm.get('name')"
-                         [ngClass]="{'is-invalid': isValid('name')}"
-                         id="name"
-                         class="form-control"
-                         placeholder="Enter your name">
-                  <div *ngIf="hasError('name', 'required')" class="invalid-feedback">
-                    Email address is required
-                  </div>
-                  <div *ngIf="hasError('email', 'email')" class="invalid-feedback">
-                    Invalid email address
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="phone">Phone</label>
+                  <label for="city">City</label>
                   <input type="text"
-                         [formControl]="signupForm.get('phone')"
+                         [formControl]="signupForm.get('address.city')"
+                         [ngClass]="{'is-invalid': isValid('address.city')}"
                          class="form-control"
-                         id="phone"
-                         placeholder="phone">
+                         id="city"
+                         placeholder="Enter City">
+                  <div *ngIf="hasError('address.city', 'required')" class="invalid-feedback">
+                    City is required
+                  </div>
                 </div>
 
-                <fieldset>
-                  <legend>Address</legend>
-                  <div class="form-group">
-                    <label for="state">state</label>
-                    <select class="form-control" id="state"
-                            [formControl]="signupForm.get('address.state')"
-                            [ngClass]="{'is-invalid': isValid('address.state')}">
-                      <option value="AL">Alabama</option>
-                      <option value="AK">Alaska</option>
-                      <option value="AZ">Arizona</option>
-                      <option value="AR">Arkansas</option>
-                      <option value="CA">California</option>
-                      <option value="CO">Colorado</option>
-                      <option value="CT">Connecticut</option>
-                      <option value="DE">Delaware</option>
-                      <option value="DC">District of Columbia</option>
-                      <option value="FL">Florida</option>
-                      <option value="GA">Georgia</option>
-                      <option value="HI">Hawaii</option>
-                      <option value="ID">Idaho</option>
-                      <option value="IL">Illinois</option>
-                      <option value="IN">Indiana</option>
-                      <option value="IA">Iowa</option>
-                      <option value="KS">Kansas</option>
-                      <option value="KY">Kentucky</option>
-                      <option value="LA">Louisiana</option>
-                      <option value="ME">Maine</option>
-                      <option value="MD">Maryland</option>
-                      <option value="MA">Massachusetts</option>
-                      <option value="MI">Michigan</option>
-                      <option value="MN">Minnesota</option>
-                      <option value="MS">Mississippi</option>
-                      <option value="MO">Missouri</option>
-                      <option value="MT">Montana</option>
-                      <option value="NE">Nebraska</option>
-                      <option value="NV">Nevada</option>
-                      <option value="NH">New Hampshire</option>
-                      <option value="NJ">New Jersey</option>
-                      <option value="NM">New Mexico</option>
-                      <option value="NY">New York</option>
-                      <option value="NC">North Carolina</option>
-                      <option value="ND">North Dakota</option>
-                      <option value="OH">Ohio</option>
-                      <option value="OK">Oklahoma</option>
-                      <option value="OR">Oregon</option>
-                      <option value="PA">Pennsylvania</option>
-                      <option value="RI">Rhode Island</option>
-                      <option value="SC">South Carolina</option>
-                      <option value="SD">South Dakota</option>
-                      <option value="TN">Tennessee</option>
-                      <option value="TX">Texas</option>
-                      <option value="UT">Utah</option>
-                      <option value="VT">Vermont</option>
-                      <option value="VA">Virginia</option>
-                      <option value="WA">Washington</option>
-                      <option value="WV">West Virginia</option>
-                      <option value="WI">Wisconsin</option>
-                      <option value="WY">Wyoming</option>
-                    </select>
-                    <div *ngIf="hasError('address.state', 'required')" class="invalid-feedback">
-                      State is required
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <label for="city">City</label>
-                    <input type="text"
-                           [formControl]="signupForm.get('address.city')"
-                           [ngClass]="{'is-invalid': isValid('address.city')}"
-                           class="form-control"
-                           id="city"
-                           placeholder="Enter City">
-                    <div *ngIf="hasError('address.city', 'required')" class="invalid-feedback">
-                      City is required
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <label for="street">Street</label>
-                    <input type="text"
-                           [formControl]="signupForm.get('address.street')"
-                           [ngClass]="{'is-invalid': isValid('address.street')}"
-                           class="form-control"
-                           id="street"
-                           placeholder="Enter street">
-                    <div *ngIf="hasError('address.street', 'required')" class="invalid-feedback">
-                      Street is required
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <label for="zipCode">Zip code</label>
-                    <input type="text"
-                           [formControl]="signupForm.get('address.zipCode')"
-                           [ngClass]="{'is-invalid': isValid('address.zipCode')}"
-                           class="form-control"
-                           id="zipCode"
-                           placeholder="Enter zip code">
-                    <div *ngIf="hasError('address.zipCode', 'required')" class="invalid-feedback">
-                      Zip code is required
-                    </div>
-                  </div>
-                </fieldset>
                 <div class="form-group">
-                  <label for="photoUrl">File input</label>
-                  <input type="file"
-                         class="form-control-file"
-                         id="photoUrl"
-                         [formControl]="signupForm.get('photoUrl')"
-                         [ngClass]="{'is-invalid': isValid('photoUrl')}"
-                         aria-describedby="fileHelp"
-                         (change)="onFileSelect($event)">
-                  <div *ngIf="hasError('photoUrl', 'required')" class="invalid-feedback">
-                    Photo is required
+                  <label for="street">Street</label>
+                  <input type="text"
+                         [formControl]="signupForm.get('address.street')"
+                         [ngClass]="{'is-invalid': isValid('address.street')}"
+                         class="form-control"
+                         id="street"
+                         placeholder="Enter street">
+                  <div *ngIf="hasError('address.street', 'required')" class="invalid-feedback">
+                    Street is required
                   </div>
-                  <!--                  <small id="fileHelp" class="form-text text-muted">This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a new line.</small>-->
                 </div>
-                <!--                <button type="submit" class="btn btn-primary" [disabled]="!signupForm.valid">Register</button>-->
-                <button type="submit" class="btn btn-primary" >Register</button>
+
+                <div class="form-group">
+                  <label for="zipCode">Zip code</label>
+                  <input type="text"
+                         [formControl]="signupForm.get('address.zipCode')"
+                         [ngClass]="{'is-invalid': isValid('address.zipCode')}"
+                         class="form-control"
+                         id="zipCode"
+                         placeholder="Enter zip code">
+                  <div *ngIf="hasError('address.zipCode', 'required')" class="invalid-feedback">
+                    Zip code is required
+                  </div>
+                </div>
               </fieldset>
-            </form>
-          </div>
+              <div class="form-group">
+                <label for="photoUrl">File input</label>
+                <input type="file"
+                       class="form-control-file"
+                       id="photoUrl"
+                       [formControl]="signupForm.get('photoUrl')"
+                       [ngClass]="{'is-invalid': isValid('photoUrl')}"
+                       aria-describedby="fileHelp"
+                       (change)="onFileSelect($event)">
+                <div *ngIf="hasError('photoUrl', 'required')" class="invalid-feedback">
+                  Photo is required
+                </div>
+                <!--                  <small id="fileHelp" class="form-text text-muted">This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a new line.</small>-->
+              </div>
+              <!--                <button type="submit" class="btn btn-primary" [disabled]="!signupForm.valid">Register</button>-->
+              <button type="submit" class="btn btn-primary">Register</button>
+            </fieldset>
+          </form>
         </div>
       </div>
     </div>
   </div>
-
 </main>
