Check-in into dev branch

--- a/web/src/app/modules/authentication/login/login.component.html
+++ b/web/src/app/modules/authentication/login/login.component.html
@@ -51,7 +51,7 @@
 
               <div class="col-md-6 offset-md-4">
                 <button class="btn btn-primary" (click)="onSubmit()" >Login</button>
-                <a href="/signup" class="btn btn-link"> Create new account </a>
+                <a [routerLink]="['signup']" class="btn btn-link"> Create new account </a>
               </div>
 
               <p>
