fix the icon not displaying

--- a/web/src/app/modules/shopping/products/product-details/product-details.component.html
+++ b/web/src/app/modules/shopping/products/product-details/product-details.component.html
@@ -1,1 +1,35 @@
-<p>product-details works!</p>
+<main class="acc-form">
+
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <img src="../../../../../assets/images/p1.jpg" class="col" />
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-6">
+        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+          <label class="btn btn-primary active">
+            <input type="button" > <i class="fa fa" />
+          </label>
+          <label class="btn btn-primary">
+            <input type="checkbox" autocomplete="off"> $0.00
+          </label>
+          <label class="btn btn-primary">
+            <input type="checkbox" autocomplete="off"> Add to Cart
+          </label>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col">
+        <p> Brief Description goes here </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p> Full Description goes here </p>
+      </div>
+    </div>
+  </div>
+</main>
