--- a/web/src/app/modules/authentication/login/login.component.html
+++ b/web/src/app/modules/authentication/login/login.component.html
@@ -1,6 +1,6 @@
 <main class="acc-form">
 
-  <div class="cotainer">
+  <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="card">
