--- a/web/src/app/modules/shopping/products/product-list/product-list.component.html
+++ b/web/src/app/modules/shopping/products/product-list/product-list.component.html
@@ -2,7 +2,7 @@
   <!--    <c:forEach var="product" items="${products}">-->
   <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
     <div class="img-box">
-      <img src="../../../../assets/images/p1.JPG" class="prd-img-lg">
+      <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
       <div class="brd img-box-p r-btm-5 shw-hdn col-12">
         <div>
           <div class="head-text float-left">Long product name goes here</div>
@@ -12,7 +12,7 @@
 
         <div class="add-cart">
           <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fas fa-cart-plus fa-2x"></i>
+            <i class="fa fa-cart-plus fa-2x"></i>
           </button>
         </div>
       </div>
@@ -20,7 +20,7 @@
   </div>
   <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
     <div class="img-box">
-      <img src="../../../../assets/images/p1.JPG" class="prd-img-lg">
+      <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
       <div class="brd img-box-p r-btm-5 shw-hdn col-12">
         <div>
           <div class="head-text float-left">Product Name 1</div>
@@ -30,7 +30,7 @@
 
         <div class="add-cart">
           <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fas fa-cart-plus fa-2x"></i>
+            <i class="fa fa-cart-plus fa-2x"></i>
           </button>
         </div>
       </div>
@@ -38,7 +38,7 @@
   </div>
   <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
     <div class="img-box">
-      <img src="../../../../assets/images/p1.JPG" class="prd-img-lg">
+      <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
       <div class="brd img-box-p r-btm-5 shw-hdn col-12">
         <div>
           <div class="head-text float-left">Product Name 3</div>
@@ -48,7 +48,7 @@
 
         <div class="add-cart">
           <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fas fa-cart-plus fa-2x"></i>
+            <i class="fa fa-cart-plus fa-2x"></i>
           </button>
         </div>
       </div>
@@ -56,7 +56,7 @@
   </div>
   <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
     <div class="img-box">
-      <img src="../../../../assets/images/p1.JPG" class="prd-img-lg">
+      <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
       <div class="brd img-box-p r-btm-5 shw-hdn col-12">
         <div>
           <div class="head-text float-left">Product Name 4</div>
@@ -66,7 +66,7 @@
 
         <div class="add-cart">
           <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fas fa-cart-plus fa-2x"></i>
+            <i class="fa fa-cart-plus fa-2x"></i>
           </button>
         </div>
       </div>
@@ -74,7 +74,7 @@
   </div>
   <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
     <div class="img-box">
-      <img src="../../../../assets/images/p1.JPG" class="prd-img-lg">
+      <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
       <div class="brd img-box-p r-btm-5 shw-hdn col-12">
         <div>
           <div class="head-text float-left">Product Name 4</div>
@@ -84,7 +84,7 @@
 
         <div class="add-cart">
           <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fas fa-cart-plus fa-2x"></i>
+            <i class="fa fa-cart-plus fa-2x"></i>
           </button>
         </div>
       </div>
@@ -92,7 +92,7 @@
   </div>
   <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
     <div class="img-box">
-      <img src="../../../../assets/images/p1.JPG" class="prd-img-lg">
+      <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
       <div class="brd img-box-p r-btm-5 shw-hdn col-12">
         <div>
           <div class="head-text float-left">Product Name 5</div>
@@ -102,7 +102,7 @@
 
         <div class="add-cart">
           <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fas fa-cart-plus fa-2x"></i>
+            <i class="fa fa-cart-plus fa-2x"></i>
           </button>
         </div>
       </div>
