--- a/web/src/app/modules/shopping/products/product-list/product-list.component.html
+++ b/web/src/app/modules/shopping/products/product-list/product-list.component.html
@@ -11,9 +11,8 @@
         <div class="details-text float-left">short description like thi ajfkafkla fja  anfkdkfdjdk</div>
 
         <div class="add-cart">
-          <i class="fas fa-cart-plus"></i>
           <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fa fa-cart-plus fa-2x"></i>
+            <i class="fa fa-cart-plus"></i>
           </button>
         </div>
       </div>
@@ -31,7 +30,7 @@
 
         <div class="add-cart">
           <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fa fa-cart-plus fa-2x"></i>
+            <i class="fa fa-cart-plus"></i>
           </button>
         </div>
       </div>
@@ -49,7 +48,7 @@
 
         <div class="add-cart">
           <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fa fa-cart-plus fa-2x"></i>
+            <i class="fa fa-cart-plus"></i>
           </button>
         </div>
       </div>
@@ -67,7 +66,7 @@
 
         <div class="add-cart">
           <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fa fa-cart-plus fa-2x"></i>
+            <i class="fa fa-cart-plus"></i>
           </button>
         </div>
       </div>
@@ -85,7 +84,7 @@
 
         <div class="add-cart">
           <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fa fa-cart-plus fa-2x"></i>
+            <i class="fa fa-cart-plus"></i>
           </button>
         </div>
       </div>
@@ -103,7 +102,7 @@
 
         <div class="add-cart">
           <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fa fa-cart-plus fa-2x"></i>
+            <i class="fa fa-cart-plus"></i>
           </button>
         </div>
       </div>
