--- a/web/src/app/modules/shopping/products/product-details/product-details.component.html
+++ b/web/src/app/modules/shopping/products/product-details/product-details.component.html
@@ -3,17 +3,17 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8">
-        <img src="../../../../../assets/images/p1.jpg" class="col" />
+        <img src="../../../../../assets/images/p1.jpg" class="col"  alt="product image banner"/>
       </div>
     </div>
     <div class="row justify-content-center">
       <div class="col-6">
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
           <label class="btn btn-primary active">
-            <input type="button" > <i class="fa fa" />
+            <input type="button" > <i class="fa fa-cart-plus"></i>
           </label>
           <label class="btn btn-primary">
-            <input type="checkbox" autocomplete="off"> $0.00
+            <input type="checkbox" autocomplete="off"> <i class="fa fa-cart-plus"></i> $0.00
           </label>
           <label class="btn btn-primary">
             <input type="checkbox" autocomplete="off"> Add to Cart
