--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -47,6 +47,9 @@
   </nav>
 </header>
 <section class="container">
+  <app-product-search></app-product-search>
+</section>
+<section class="container">
   <router-outlet></router-outlet>
 </section>
 <footer class="footer bg-primary row">
