Subscribe Vendor, Done 50%

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -46,9 +46,9 @@
     </div>
   </nav>
 </header>
-<section class="container">
-  <app-product-search></app-product-search>
-</section>
+<!--<section class="container">-->
+<!--  <app-product-search></app-product-search>-->
+<!--</section>-->
 <section class="container">
   <router-outlet></router-outlet>
 </section>
