--- a/web/src/app/modules/authentication/signup/signup.component.html
+++ b/web/src/app/modules/authentication/signup/signup.component.html
@@ -179,7 +179,7 @@
                           Expire date is required
                         </div>
                         <div *ngIf="hasError('card.expireDate', 'pattern')" class="invalid-feedback">
-                          Invalid expire date, must be MM/DD
+                          Invalid expire date, must be MM/YY
                         </div>
                       </div>
                     </div>
