--- a/web/src/app/modules/shopping/products/product-search/product-search.component.html
+++ b/web/src/app/modules/shopping/products/product-search/product-search.component.html
@@ -9,7 +9,7 @@
 <!--    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">-->
 <!--  </div>-->
 <!--</div>-->
-<!--<div class="row">-->
+<!--<div class="rnow">-->
 <!--  <div class="col-md-6">-->
 <!--    <label for="exampleFormControlInput1">Email address</label>-->
 <!--    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">-->
