--- a/web/src/app/modules/admin/manage-category/add-category/add-category.component.html
+++ b/web/src/app/modules/admin/manage-category/add-category/add-category.component.html
@@ -1,19 +1,19 @@
 <main class="acc-form">
 
   <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-8">
-        <h4>Admin Category List</h4>
+    <div class="row justify-content-center mb-1">
+      <div class="col-10">
+        <h4>Admin Category</h4>
       </div>
-      <div class="col-4">
+      <div class="col-2">
         <button type="button" class="btn btn-primary">Save</button>
       </div>
     </div>
     <div class="row justify-content-center">
       <div class="col">
-        <div class="col-md-8">
+        <div class="col-md">
           <div class="card">
-            <div class="card-header">Create/Edit Product</div>
+            <div class="card-header">Add Category</div>
             <div class="card-body">
               <form [formGroup]="categoryForm" >
                 <div class="form-group row">
