--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -42,7 +42,7 @@
         </form>
       </div>
 
-      <a [routerLink]="['edit-user',1]" *ngIf="authService.isAuthenticated">
+      <a [routerLink]="['edit-profile']" *ngIf="authService.isAuthenticated">
         <img class="user-small-img"
              src="{{hostUrl + '/uploads/profile-photo.png'}}"
              alt="avatar"
@@ -53,7 +53,7 @@
              *ngIf="authService.currentUser.imageUrl !=''">
       </a>
       <a class="nav-link" style="color:white" *ngIf="!authService.isAuthenticated" [routerLink]="['login']">Login</a>
-      <a class="nav-link" style="color:white" [routerLink]="['home']"
+      <a class="nav-link" style="color:white" [routerLink]="['edit-profile']"
          *ngIf="authService.isAuthenticated">Hello, {{authService.currentUser.name}} </a>
       <a class="nav-link" style="color:white" *ngIf="authService.isAuthenticated"
          (click)="authService.logout()">Logout</a>
