--- a/web/src/app/modules/admin/manage-users/edit-user/edit-user.component.html
+++ b/web/src/app/modules/admin/manage-users/edit-user/edit-user.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-md-8">
       <div class="card">
-        <div class="card-header">Register</div>
+        <div class="card-header">Edit User</div>
 
         <div class="card-body">
           <form [formGroup]="form" (ngSubmit)="onSubmit()">
@@ -60,7 +60,7 @@
 
 
                 </div>
-              <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Register</button>
+              <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Save</button>
 
             </fieldset>
 
