--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -34,14 +34,20 @@
         </li>
       </ul>
       <div>
-        <form class="form-inline my-2 my-lg-0" [formGroup]="searchForm" (ngSubmit)="onSubmit()" >
+        <form class="form-inline my-3 my-lg-0" [formGroup]="searchForm" (ngSubmit)="onSubmit()" >
           <input class="form-control mr-sm-2" type="text" placeholder="Search" [formControl]="searchForm.get('search')">
           <button type="submit"  class="btn btn-secondary my-2 my-sm-0 search-icon">
             <i class="fa fa-search" aria-hidden="true"></i>
           </button>
+          <!-- Cart  -->
+          <a [routerLink]="['cart']" class="mr-1 white">
+            <i class="fa fa-lg fa-shopping-cart" aria-hidden="true"></i>
+            <i class="cart-ico" *ngIf="true">20</i> <!-- Todo: check cart items count if zero then ngIf=false -->
+          </a>
         </form>
       </div>
 
+      <!-- User image -->
       <a [routerLink]="['edit-profile']" *ngIf="authService.isAuthenticated">
         <img class="user-small-img"
              src="{{hostUrl + '/uploads/profile-photo.png'}}"
@@ -52,11 +58,18 @@
              alt="avatar"
              *ngIf="authService.currentUser.imageUrl !=''">
       </a>
-      <a class="nav-link" style="color:white" *ngIf="!authService.isAuthenticated" [routerLink]="['login']">Login</a>
-      <a class="nav-link" style="color:white" [routerLink]="['edit-profile']"
-         *ngIf="authService.isAuthenticated">Hello, {{authService.currentUser.name}} </a>
+      <!-- Login -->
+      <a class="nav-link" style="color:white" *ngIf="!authService.isAuthenticated" [routerLink]="['login']">
+        Login
+      </a>
+      <!-- user name -->
+      <a class="nav-link" class="white pd-lft-1" [routerLink]="['edit-profile']"
+         *ngIf="authService.isAuthenticated">Hello, {{authService.currentUser.name}}
+      </a>
+      <!-- Logout -->
       <a class="nav-link" style="color:white" *ngIf="authService.isAuthenticated"
-         (click)="authService.logout()">Logout</a>
+         (click)="authService.logout()">Logout
+      </a>
     </div>
   </nav>
 </header>
