--- a/web/src/app/modules/shopping/products/product-catalog-list/product-catalog-list.component.html
+++ b/web/src/app/modules/shopping/products/product-catalog-list/product-catalog-list.component.html
@@ -1,112 +1,179 @@
-<div class="row justify-content-center">
-  <!--    <c:forEach var="product" items="${products}">-->
-  <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
-    <div class="img-box">
-      <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
-      <div class="brd img-box-p r-btm-5 shw-hdn col-12">
-        <div>
-          <div class="head-text float-left">Long product name goes here</div>
-          <div class="float-right">$000.00</div>
-        </div>
-        <div class="details-text float-left">short description like thi ajfkafkla fja  anfkdkfdjdk</div>
-
-        <div class="add-cart">
-          <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fa fa-cart-plus fa-lg"></i>
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
-    <div class="img-box">
-      <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
-      <div class="brd img-box-p r-btm-5 shw-hdn col-12">
-        <div>
-          <div class="head-text float-left">Product Name 1</div>
-          <div class="float-right">$000.00</div>
-        </div>
-        <div class="details-text float-left">short description like thi ajfkafkla fja  anfkdkfdjdk</div>
-
-        <div class="add-cart">
-          <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fa fa-cart-plus fa-lg"></i>
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
-    <div class="img-box">
-      <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
-      <div class="brd img-box-p r-btm-5 shw-hdn col-12">
-        <div>
-          <div class="head-text float-left">Product Name 3</div>
-          <div class="float-right">$000.00</div>
-        </div>
-        <div class="details-text float-left">short description like thi ajfkafkla fja  anfkdkfdjdk</div>
-
-        <div class="add-cart">
-          <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fa fa-cart-plus fa-lg"></i>
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
-    <div class="img-box">
-      <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
-      <div class="brd img-box-p r-btm-5 shw-hdn col-12">
-        <div>
-          <div class="head-text float-left">Product Name 4</div>
-          <div class="float-right">$000.00</div>
-        </div>
-        <div class="details-text float-left">short description like thi ajfkafkla fja  anfkdkfdjdk</div>
-
-        <div class="add-cart">
-          <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fa fa-cart-plus fa-lg"></i>
-          </button>
+<div class="container">
+  <div class="row justify-content-center">
+    <button class="btn btn-primary adv-search"
+            type="button"
+            data-toggle="collapse"
+            data-target="#collapseSearch"
+            aria-expanded="false"
+            aria-controls="collapseSearch">
+      <i class="fa fa-angle-down" aria-hidden="true"></i>
+    </button>
+    <div class="col-12">
+      <div class="collapse row" id="collapseSearch">
+        <div class="card card-body col-md-12 col-sm-12 adv-search-crd">
+          <form>
+            <fieldset>
+              <div class="form-group">
+                <label for="product">Search</label>
+                <input type="text"
+                       id="product"
+                       class="form-control"
+                       placeholder="Search text"
+                       max="100">
+              </div>
+              <div class="row">
+                <div class="form-group col-4">
+                  <label for="vendor">Vendor</label>
+                  <input type="text"
+                         id="vendor"
+                         class="form-control"
+                         placeholder="Vendor name"
+                         max="50">
+                </div>
+                <div class="form-group col-4">
+                  <label for="category">Category</label>
+                  <input type="text"
+                         class="form-control"
+                         id="category"
+                         placeholder="Category name"
+                         max="50">
+                </div>
+                <div class="form-group col-2">
+                  <label for="priceFrom">Price From</label>
+                  <input type="number"
+                         step="0.01"
+                         class="form-control"
+                         id="priceFrom"/>
+                </div>
+                <div class="form-group col-2">
+                  <label for="priceTo">Price To</label>
+                  <input type="number"
+                         step="0.01"
+                         class="form-control"
+                         id="priceTo"/>
+                </div>
+              </div>
+            </fieldset>
+            <button type="submit" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i> Search
+            </button>
+          </form>
         </div>
       </div>
     </div>
-  </div>
-  <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
-    <div class="img-box">
-      <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
-      <div class="brd img-box-p r-btm-5 shw-hdn col-12">
-        <div>
-          <div class="head-text float-left">Product Name 4</div>
-          <div class="float-right">$000.00</div>
-        </div>
-        <div class="details-text float-left">short description like thi ajfkafkla fja  anfkdkfdjdk</div>
+    <!-- Products Catalog -->
+    <div class="row">
+      <!--    <c:forEach var="product" items="${products}">-->
+      <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
+        <div class="img-box">
+          <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
+          <div class="brd img-box-p r-btm-5 shw-hdn col-12">
+            <div>
+              <div class="head-text float-left">Long product name goes here</div>
+              <div class="float-right">$000.00</div>
+            </div>
+            <div class="details-text float-left">short description like thi ajfkafkla fja anfkdkfdjdk</div>
 
-        <div class="add-cart">
-          <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fa fa-cart-plus fa-lg"></i>
-          </button>
+            <div class="add-cart">
+              <button type="submit" class="btn btn-primary btn-add-cart">
+                <i class="fa fa-cart-plus fa-lg"></i>
+              </button>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
-    <div class="img-box">
-      <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
-      <div class="brd img-box-p r-btm-5 shw-hdn col-12">
-        <div>
-          <div class="head-text float-left">Product Name 5</div>
-          <div class="float-right">$000.00</div>
-        </div>
-        <div class="details-text float-left">short description like thi ajfkafkla fja  anfkdkfdjdk</div>
+      <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
+        <div class="img-box">
+          <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
+          <div class="brd img-box-p r-btm-5 shw-hdn col-12">
+            <div>
+              <div class="head-text float-left">Product Name 1</div>
+              <div class="float-right">$000.00</div>
+            </div>
+            <div class="details-text float-left">short description like thi ajfkafkla fja anfkdkfdjdk</div>
 
-        <div class="add-cart">
-          <button type="submit" class="btn btn-primary btn-add-cart">
-            <i class="fa fa-cart-plus fa-lg"></i>
-          </button>
+            <div class="add-cart">
+              <button type="submit" class="btn btn-primary btn-add-cart">
+                <i class="fa fa-cart-plus fa-lg"></i>
+              </button>
+            </div>
+          </div>
         </div>
       </div>
+      <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
+        <div class="img-box">
+          <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
+          <div class="brd img-box-p r-btm-5 shw-hdn col-12">
+            <div>
+              <div class="head-text float-left">Product Name 3</div>
+              <div class="float-right">$000.00</div>
+            </div>
+            <div class="details-text float-left">short description like thi ajfkafkla fja anfkdkfdjdk</div>
+
+            <div class="add-cart">
+              <button type="submit" class="btn btn-primary btn-add-cart">
+                <i class="fa fa-cart-plus fa-lg"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
+        <div class="img-box">
+          <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
+          <div class="brd img-box-p r-btm-5 shw-hdn col-12">
+            <div>
+              <div class="head-text float-left">Product Name 4</div>
+              <div class="float-right">$000.00</div>
+            </div>
+            <div class="details-text float-left">short description like thi ajfkafkla fja anfkdkfdjdk</div>
+
+            <div class="add-cart">
+              <button type="submit" class="btn btn-primary btn-add-cart">
+                <i class="fa fa-cart-plus fa-lg"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
+        <div class="img-box">
+          <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
+          <div class="brd img-box-p r-btm-5 shw-hdn col-12">
+            <div>
+              <div class="head-text float-left">Product Name 4</div>
+              <div class="float-right">$000.00</div>
+            </div>
+            <div class="details-text float-left">short description like thi ajfkafkla fja anfkdkfdjdk</div>
+
+            <div class="add-cart">
+              <button type="submit" class="btn btn-primary btn-add-cart">
+                <i class="fa fa-cart-plus fa-lg"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-4 col-sm-6 hh-50 product-box-lg">
+        <div class="img-box">
+          <img src="../../../../../assets/images/p1.jpg" class="prd-img-lg">
+          <div class="brd img-box-p r-btm-5 shw-hdn col-12">
+            <div>
+              <div class="head-text float-left">Product Name 5</div>
+              <div class="float-right">$000.00</div>
+            </div>
+            <div class="details-text float-left">short description like thi ajfkafkla fja anfkdkfdjdk</div>
+
+            <div class="add-cart">
+              <button type="submit" class="btn btn-primary btn-add-cart">
+                <i class="fa fa-cart-plus fa-lg"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--    </c:forEach>-->
     </div>
+
   </div>
-  <!--    </c:forEach>-->
 </div>
