Advance search Layout - Product List Catalog

--- a/web/src/app/modules/shopping/products/product-catalog-list/product-catalog-list.component.html
+++ b/web/src/app/modules/shopping/products/product-catalog-list/product-catalog-list.component.html
@@ -56,6 +56,9 @@
             </fieldset>
             <button type="submit" class="btn btn-primary">
               <i class="fa fa-search-plus"></i> Search
+            </button> &nbsp;
+            <button type="button" class="btn btn-primary">
+              <i class="fa fa-eraser" aria-hidden="true"></i> clear
             </button>
           </form>
         </div>
