--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -40,7 +40,7 @@
             <i class="fa fa-search" aria-hidden="true"></i>
           </button>
           <!-- Cart  -->
-          <a [routerLink]="['cart']" class="mr-1 white">
+          <a [routerLink]="['/cart']" class="mr-1 white">
             <i class="fa fa-lg fa-shopping-cart" aria-hidden="true"></i>
             <i class="cart-ico" *ngIf="true">20</i> <!-- Todo: check cart items count if zero then ngIf=false -->
           </a>
